    that share some internal cache or bus. This can be equivalent
    to the L2 Cache level on some platforms (e.g. x86) or a specific
    level between L2 and L3 on others (e.g. ARM Kungpeng 920).
    Thanks to Jonathan Cameron for the help.
    - HWLOC_DONT_MERGE_CLUSTER_GROUPS=1 may be set in the environment
      to prevent these groups from being merged with identical caches, etc.
  + Add many new attributes in LevelZero devices to describe their types
    and numbers of slices, subslices, execution units and threads.
* Tools
  + Add --grey and --palette options to switch lstopo to greyscale or
    white-background-only graphics, or to tune individual colors.
* Build
  + Windows CMake builds now support non-MSVC compilers, detect several
    features at build time, can build/run tests, etc.
    Thanks to Michael Hirsch and Alexander Neumann .


Version 2.6.0
-------------
* Backends
  + Expose two cpukinds for energy-efficient cores (icestorm) and
    high-performance cores (firestorm) on Apple M1 on Mac OS X.
  + Use sysfs CPU "capacity" to rank hybrid cores by efficiency
    on Linux when available (mostly on recent ARM platforms for now).
  + Improve HWLOC_MEMBIND_BIND (without the STRICT flag) on Linux kernel
    >= 5.15: If more than one node is given, the kernel may now use all
    of them instead of only the first one before falling back to others.
  + Expose cache os_index when available on Linux, it may be needed
    when using resctrl to configure cache partitioning, memory bandwidth
    monitoring, etc.
  + Add a "XGMIHops" distances matrix in the RSMI backend for AMD GPU
    interconnected through XGMI links.
  + Expose AMD GPU memory information (VRAM and GTT) in the RSMI backend.
  + Add OS devices such as "bxi0" for Atos/Bull BXI HCAs on Linux.
* Tools
  + lstopo has a better placement algorithm with respect to I/O
    objects, see --children-order in the manpage for details.
  + hwloc-annotate may now change object subtypes and cache or memory